# activity-cliff-multimodal-learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: figure1.yaml  preprocess_toy.yaml  toy.yaml
data/raw/: toy_activity.csv
scripts/: evaluate.py  make_figure1_collapse.py  preprocess_activity_cliffs.py  train.py
src/: __init__.py
src/analysis/: __init__.py  representation_collapse.py
src/data/: __init__.py  preprocessing.py  synthetic.py
src/evaluation/: metrics.py
src/generation/: __init__.py
src/losses/: __init__.py  cliff_contrastive.py
src/models/: __init__.py  encoders.py  fusion.py  multimodal.py
src/training/: __init__.py  logger.py  runner.py
tests/: test_data.py  test_model_and_loss.py  test_preprocessing.py  test_representation_collapse.py  test_training.py
